--- a/sass/pages/_noticias.scss
+++ b/sass/pages/_noticias.scss
@@ -1,14 +1,14 @@
 /* Página Noticias */
 
-.noticias__importantes {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-    width: 80vw;
-    max-width: 500px;
-    align-items: center;
-    margin: 0 auto;
-}
+// .noticias__importantes {
+//     display: grid;
+//     grid-template-columns: 1fr;
+//     gap: 2rem;
+//     width: 80vw;
+//     max-width: 500px;
+//     align-items: center;
+//     margin: 0 auto;
+// }
 
 .caja__noticias {
     display: flex;
