--- a/css/styles.css
+++ b/css/styles.css
@@ -64,40 +64,28 @@ main {
   font-size: 2rem;
 }
 
-/* Estilización footer */
 footer {
   background-image: url("../Imagenes/flores-lilas.jpg");
+}
+
+.footer {
   color: white;
-}
-
-footer a {
-  color: white;
-}
-
-footer .btn {
-  border: 1px rgb(178, 8, 178) solid;
-  background-color: violet;
-  border-radius: 5px;
-  padding: 5px;
-}
-
-.footer__total {
   display: flex;
   flex-direction: column;
   padding: 1rem;
   text-align: center;
 }
-
 .footer__nav,
-.footer__redes,
-.footer_contacto {
+.footer __redes,
+.footer __contacto {
   flex-direction: column;
   justify-content: center;
 }
-
+.footer__link {
+  color: white;
+}
 @media (min-width: 1200px) {
-  /* Estilización footer */
-  .footer__total {
+  .footer {
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
@@ -105,21 +93,29 @@ footer .btn {
     max-width: 900px;
   }
   .footer__nav,
-  .footer__redes {
+  .footer __redes {
     display: flex;
     flex-direction: column;
     justify-content: start;
     gap: 1rem;
   }
-  footer ul {
+  .footer ul {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
   }
 }
+
 /* Estilización header */
 header img {
   width: 150px;
+}
+
+footer .btn {
+  border: 1px rgb(178, 8, 178) solid;
+  background-color: violet;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 /* Página Inicio */
@@ -133,7 +129,7 @@ header img {
   align-items: center;
 }
 
-.caja__inicio {
+.inicio {
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -146,19 +142,15 @@ header img {
   align-items: center;
   text-align: center;
 }
-
-.caja__inicio img {
+.inicio__img {
   min-width: 300px;
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
-  border-radius: 1rem;
+  border-radius: 25px;
 }
-
 @media (min-width: 1200px) {
-  /* Estilización main */
-  /* Página inicio */
-  .caja__inicio {
+  .inicio {
     display: flex;
     flex-direction: row;
     max-width: 1100px;
@@ -167,17 +159,56 @@ header img {
     margin: auto;
   }
 }
-/* Página Noticias */
-.noticias__importantes {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 2rem;
-  width: 80vw;
-  max-width: 500px;
-  align-items: center;
-  margin: 0 auto;
+
+.titulo-zona {
+  text-align: center;
+  margin-top: 2rem;
 }
 
+.zona {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.zona__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+  gap: 1rem;
+  padding: 2rem;
+  width: 300px;
+  background-color: rgb(196, 132, 255);
+  border-radius: 20px;
+}
+.zona__img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.zona__titulo {
+  font-size: 2rem;
+  color: black;
+}
+.zona__descripción {
+  font-size: 1rem;
+}
+@media (min-width: 1200px) {
+  .zona {
+    flex-direction: row;
+    gap: 2rem;
+    overflow: auto;
+  }
+  .zona__card {
+    flex-basis: 250px;
+    flex-shrink: 0;
+  }
+}
+
+/* Página Noticias */
 .caja__noticias {
   display: flex;
   flex-direction: column;
@@ -223,16 +254,20 @@ header img {
   text-align: center;
   gap: 1rem;
 }
+@media (min-width: 1200px) {
+  .formulario__productos form {
+    justify-content: space-evenly;
+  }
+}
 
-.carousel__contenedor {
+.producto {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 1rem;
   gap: 1rem;
 }
-
-.carousel__tarjeta {
+.producto__card {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -244,20 +279,14 @@ header img {
   background-color: rgb(196, 132, 255);
   border-radius: 15px;
 }
-
 @media (min-width: 1200px) {
-  /* Página productos */
-  .formulario__productos form {
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-  .carousel__contenedor {
+  .producto {
     flex-direction: row;
     gap: 2rem;
     overflow: auto;
     margin: 1.5rem;
   }
-  .carousel__tarjeta {
+  .producto__card {
     flex-basis: 250px;
     flex-shrink: 0;
   }
