--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -65,3 +65,14 @@ main {
     font-size: 2rem;
 }
 
+@mixin mq-tablet{
+    @media (min-width:768px){
+        @content;
+    }
+}
+
+@mixin mq-desktop{
+    @media (min-width:1200px){
+        @content;
+    }
+}
