--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,67 +1,45 @@
-/* Estilización footer */
 
-footer {
+footer{
     background-image: url("../Imagenes/flores-lilas.jpg");
+}
+
+.footer {
     color: white;
-}
-
-footer a {
-    color: white;
-}
-
-footer .btn {
-    border: 1px rgb(178, 8, 178) solid;
-    background-color: violet;
-    border-radius: 5px;
-    padding: 5px;
-}
-
-.footer__total {
     display: flex;
     flex-direction: column;
     padding: 1rem;
     text-align: center;
-}
 
-.footer__nav,
-.footer__redes,
-.footer_contacto {
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-
-
-
-
-
-
-@media (min-width:1200px) {
-
-    /* Estilización footer */
-
-    .footer__total {
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-content: center;
-        margin: auto;
-        max-width: 900px;
-    }
-
-    .footer__nav,
-    .footer__redes {
-        display: flex;
+    &__nav,
+    __redes,
+    __contacto {
         flex-direction: column;
-        justify-content: start;
-        gap: 1rem;
+        justify-content: center;
     }
 
-
-    footer ul {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
+    &__link{
+        color: white;
     }
 
+    @include mq-desktop {
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-content: center;
+            margin: auto;
+            max-width: 900px;
+
+            &__nav,
+            __redes {
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 1rem;
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+    }
 }
