--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 
 @import "./components/footer";
 @import "./components/header";
+@import "./components/button";
 
 @import "./pages/index";
 @import "./pages/informacion";
