--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 
 footer{
-    background-image: url("../Imagenes/flores-lilas.jpg");
+    background-image: url("../imagenes/flores-lilas.jpg");
 }
 
 .footer {
