--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    gap: 2rem;
+    gap: 3rem;
     align-items: center;
 }
 
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    gap: 1rem;
+    gap: 10rem;
     width: 75vw;
     max-width: 350px;
     background-color: rgb(196, 132, 255);
@@ -21,14 +21,21 @@
     overflow: hidden;
     align-items: center;
     text-align: center;
-    &__img{
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+
+    &:hover {
+        transform: scale(1.05);
+    }
+
+    &__img {
         min-width: 300px;
         max-width: 100%;
         max-height: 100%;
         object-fit: cover;
-        border-radius: 25px;
+        border-radius: 30rem;
     }
-    @include mq-desktop{
+
+    @include mq-desktop {
         display: flex;
         flex-direction: row;
         max-width: 1100px;
