--- a/sass/pages/_noticias.scss
+++ b/sass/pages/_noticias.scss
@@ -1,54 +1,120 @@
 /* Página Noticias */
 
-// .noticias__importantes {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     gap: 2rem;
-//     width: 80vw;
-//     max-width: 500px;
+
+.noticias {
+    display: grid;
+    gap: 2rem;
+    max-width: 80vw;
+    justify-content: center;
+    margin: auto;
+
+    &__tarjeta {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        background-color: rgb(196, 132, 255);
+        justify-items: center;
+        max-width: 80vw;
+        border-radius: 50px;
+        padding: 2rem;
+    }
+
+    &__img {
+        border-radius: 50px;
+        padding: 1rem;
+    }
+
+    @include mq-desktop {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+
+        :nth-child(1) {
+            grid-row: span 2;
+            font-size: 2rem;
+        }
+    }
+}
+
+.noticias2 {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+
+    &__tarjeta {
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(196, 132, 255);
+        width: 80%;
+        border-radius: 30px;
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+        padding-bottom: 1rem;
+    }
+
+    &__titulo,&__texto{
+        padding: 0 2rem;
+    }
+
+    @include mq-desktop {
+        flex-direction: row;
+
+        &__tarjeta {
+            max-width: 400px;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+// .caja__noticias {
+//     display: flex;
+//     flex-direction: column;
+//     padding: 1rem;
+//     gap: 1rem;
+//     background-color: rgb(196, 132, 255);
+//     border-radius: 25px;
+//     overflow: hidden;
 //     align-items: center;
-//     margin: 0 auto;
+//     text-align: center;
 // }
 
-.caja__noticias {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 1rem;
-    background-color: rgb(196, 132, 255);
-    border-radius: 25px;
-    overflow: hidden;
-    align-items: center;
-    text-align: center;
-}
 
+// @media (min-width:1200px) {
+//         /* Página noticias */
+//         .noticias__importantes div:nth-child(1) {
+//             grid-row: span 2;
+//         }
 
-@media (min-width:1200px) {
-        /* Página noticias */
-        .noticias__importantes div:nth-child(1) {
-            grid-row: span 2;
-        }
-    
-        .caja__noticias {
-            width: 100%;
-            max-width: 100%;
-            padding: 2rem;
-        }
-    
-        .noticias__importantes {
-            grid-template-columns: 1.4fr 1fr;
-            grid-template-rows: repeat(2, auto);
-            max-width: 1500px;
-            margin: 0 auto;
-        }
-    
-        .noticias__importantes div:nth-child(1) {
-            grid-row: span 2;
-        }
-    
-        .caja__noticias {
-            width: 100%;
-            max-width: 100%;
-            padding: 2rem;
-        }
-}
+//         .caja__noticias {
+//             width: 100%;
+//             max-width: 100%;
+//             padding: 2rem;
+//         }
+
+//         .noticias__importantes {
+//             grid-template-columns: 1.4fr 1fr;
+//             grid-template-rows: repeat(2, auto);
+//             max-width: 1500px;
+//             margin: 0 auto;
+//         }
+
+//         .noticias__importantes div:nth-child(1) {
+//             grid-row: span 2;
+//         }
+
+//         .caja__noticias {
+//             width: 100%;
+//             max-width: 100%;
+//             padding: 2rem;
+//         }
+// }
