--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -16,7 +16,7 @@
     gap: 10rem;
     width: 75vw;
     max-width: 350px;
-    background-color: rgb(196, 132, 255);
+    background-color: $color-titulo-card;
     border-radius: 25px;
     overflow: hidden;
     align-items: center;
