--- a/sass/pages/_informacion.scss
+++ b/sass/pages/_informacion.scss
@@ -1,18 +1,15 @@
 .informacion1 {
-    background-color: rgb(191, 127, 255);
+    background-color: $color-titulo-card;
     border-radius: 2rem;
     width: 70%;
     padding: 3rem;
     margin: 0 auto;
-
     &__titulo {
         font-size: 2rem;
     }
-
     &__texto {
         font-size: 1rem;
     }
-
     @include mq-desktop {
         max-width: 800px;
     }
@@ -30,14 +27,12 @@
         gap: 2rem;
         padding: 2rem;
         border: 2px solid black;
-        // background-color: aquamarine;
         border-radius: 2rem;
         margin: auto;
-    }
-    &__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        &:hover{
+            box-shadow: 10px 10px 5px  rgba(0, 0, 0, 0.425);
+
+        }
     }
     &__titulo{
         font-size: 2rem;
@@ -57,7 +52,7 @@
 
 }
 
-.creadores {
+.creadores{
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -67,10 +62,11 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-        background-color: rgb(205, 148, 255);
+        background-color: $color-titulo-card;
         border-radius: 15px;
         width: 80%;
         gap: 1rem;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
     }
     &__titulo{
         text-align: center;
@@ -81,7 +77,12 @@
         aspect-ratio: 1/1;
         object-fit: cover;
         border-radius: 50%;
-        border: 3px rgb(255, 80, 232);
+        &:hover {
+            transform: scale(1.05);
+            background-color: rgb(201, 151, 248);
+            border: 5px solid rgb(255, 191, 246);
+            outline: 5px solid rgb(255, 80, 232);
+        }
     }
     &__link {
         @extend .creadores__titulo;
@@ -89,6 +90,94 @@
         color: black;
     }
 
+    @include mq-desktop {
+        flex-direction: row;
+
+        &__card {
+            max-width: 400px;
+        }
+    }
+}
+
+.activistas {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 2rem;
+
+    &__card {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        background-color: $color-titulo-card;
+        border-radius: 15px;
+        width: 80%;
+        gap: 1rem;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
+    }
+    &__titulo{
+        text-align: center;
+    }
+    &__img {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 50%;
+        &:hover {
+            transform: scale(1.05);
+            background-color: rgb(201, 151, 248);
+            border: 5px solid rgb(255, 191, 246);
+            outline: 5px solid rgb(255, 80, 232);
+        }
+    }
+    &__link {
+        @extend .creadores__titulo;
+        text-decoration: none;
+        color: black;
+    }
+
+    @include mq-desktop {
+        flex-direction: row;
+
+        &__card {
+            max-width: 400px;
+        }
+    }
+}
+
+.documentales {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 2rem;
+
+    &__card {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        background-color: $color-titulo-card;
+        border-radius: 15px;
+        width: 80%;
+        gap: 1rem;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
+    }
+    &__titulo{
+        text-align: center;
+    }
+    &__img {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 50%;
+        &:hover {
+            transform: scale(1.05);
+            background-color: rgb(201, 151, 248);
+            border: 5px solid rgb(255, 191, 246);
+            outline: 5px solid rgb(255, 80, 232);
+        }
+    }
     @include mq-desktop {
         flex-direction: row;
 
