--- a/sass/pages/_lugares.scss
+++ b/sass/pages/_lugares.scss
@@ -1,6 +1,6 @@
 .titulo-zona{
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 4rem;
 }
 
 .zona{
@@ -18,18 +18,25 @@
         gap: 1rem;
         padding: 2rem;
         width: 300px;
-        background-color: rgb(196, 132, 255);
+        background-color: $color-titulo-card;
         border-radius: 20px;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
+            background-color: rgb(201, 151, 248);
+        }
     }
     &__img{
         border-radius: 50%;
         width: 100%;
         height: 100%;
+        aspect-ratio: 1/1;
         object-fit: cover;
     }
     &__titulo{
-        font-size: 2rem;
-        color: black;
+        font-size: 1.5rem;
+        color: $color-texto;
     }
     &__descripción{
         font-size: 1rem;
