--- a/sass/pages/_noticias.scss
+++ b/sass/pages/_noticias.scss
@@ -1,33 +1,31 @@
-/* Página Noticias */
-
-
 .noticias {
     display: grid;
     gap: 2rem;
     max-width: 80vw;
     justify-content: center;
     margin: auto;
-
     &__tarjeta {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        background-color: rgb(196, 132, 255);
+        background-color: $color-titulo-card;
         justify-items: center;
         max-width: 80vw;
         border-radius: 50px;
-        padding: 2rem;
+        padding: 1rem;
+        &:hover {
+            transform: scale(1.03);
+            box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
+            background-color: rgb(201, 151, 248);
+        }
     }
-
     &__img {
         border-radius: 50px;
         padding: 1rem;
     }
-
     @include mq-desktop {
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
-
         :nth-child(1) {
             grid-row: span 2;
             font-size: 2rem;
@@ -37,29 +35,36 @@
 
 .noticias2 {
     display: flex;
+    flex-direction: column;
+    max-width: 85vw;
     gap: 1rem;
     justify-content: center;
-
+    margin: auto;
+    align-items: center;
+    padding: 0.5rem;
     &__tarjeta {
         display: flex;
         flex-direction: column;
-        background-color: rgb(196, 132, 255);
-        width: 80%;
-        border-radius: 30px;
+        gap: 2rem;
+        padding: 1rem;
+        border: 2px solid black;
+        border-radius: 2rem;
+        margin: auto;
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.425);
+            background-color: rgb(217, 142, 244);
+        }
     }
-
-    &__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        overflow: hidden;
-        padding-bottom: 1rem;
+    &__titulo {
+        padding: 0 1rem;
+        color: $color-titulo-secciones;
     }
-
-    &__titulo,&__texto{
-        padding: 0 2rem;
+    &__texto {
+        padding: 0 1rem;
+        font-size: 1rem;
+        color: $color-texto;
     }
-
     @include mq-desktop {
         flex-direction: row;
 
@@ -68,53 +73,3 @@
         }
     }
 }
-
-
-
-
-
-
-
-
-// .caja__noticias {
-//     display: flex;
-//     flex-direction: column;
-//     padding: 1rem;
-//     gap: 1rem;
-//     background-color: rgb(196, 132, 255);
-//     border-radius: 25px;
-//     overflow: hidden;
-//     align-items: center;
-//     text-align: center;
-// }
-
-
-// @media (min-width:1200px) {
-//         /* Página noticias */
-//         .noticias__importantes div:nth-child(1) {
-//             grid-row: span 2;
-//         }
-
-//         .caja__noticias {
-//             width: 100%;
-//             max-width: 100%;
-//             padding: 2rem;
-//         }
-
-//         .noticias__importantes {
-//             grid-template-columns: 1.4fr 1fr;
-//             grid-template-rows: repeat(2, auto);
-//             max-width: 1500px;
-//             margin: 0 auto;
-//         }
-
-//         .noticias__importantes div:nth-child(1) {
-//             grid-row: span 2;
-//         }
-
-//         .caja__noticias {
-//             width: 100%;
-//             max-width: 100%;
-//             padding: 2rem;
-//         }
-// }
