--- a/sass/pages/_productos.scss
+++ b/sass/pages/_productos.scss
@@ -5,7 +5,8 @@
     align-items: center;
     text-align: center;
     gap: 1rem;
-    @include mq-desktop{
+
+    @include mq-desktop {
         justify-content: space-evenly;
     }
 }
@@ -17,8 +18,8 @@
     align-items: center;
     padding-top: 1rem;
     gap: 1rem;
-
-    &__card{
+    // height: 500px;
+    &__card {
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -27,16 +28,26 @@
         max-width: 350px;
         min-height: 350px;
         padding: 2rem;
-        background-color: rgb(196, 132, 255);
+        background-color: $color-titulo-card;
         border-radius: 15px;
+        &:hover {
+            transform: scale(1.02);
+            box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
+            background-color: rgb(201, 151, 248);
+        }
     }
-    
-    @include mq-desktop{
+    &__titulo {
+        font-size: 1.5rem;
+    }
+
+
+    @include mq-desktop {
         flex-direction: row;
         gap: 2rem;
         overflow: auto;
         margin: 1.5rem;
-        &__card{
+
+        &__card {
             flex-basis: 250px;
             flex-shrink: 0;
         }
